src_old_backup/driver/ajinextek/AXL(Library)/Visual Basic(Net)/AXDev.vb


    ' 보드내에 모듈에 레지스터를 DWord설정 및 확인한다.
    Public Declare Function AxmModuleWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer
    Public Declare Function AxmModuleReadDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer

    ' 외부 위치 비교기에 값을 설정한다.(Pos = Unit)
    Public Declare Function AxmStatusSetActComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer
    ' 외부 위치 비교기에 값을 반환한다.(Positon = Unit)
    Public Declare Function AxmStatusGetActComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpPos As Double) As Integer

    ' 내부 위치 비교기에 값을 설정한다.(Pos = Unit)
    Public Declare Function AxmStatusSetCmdComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer
    ' 내부 위치 비교기에 값을 반환한다.(Pos = Unit)
    Public Declare Function AxmStatusGetCmdComparatorPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpPos As Double) As Integer
    ' ABS Position 을 Flash 에 설정한다.
    Public Declare Function AxmStatusSetFlashAbsOffset Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPosition As Integer) As Integer
    ' Flash 에 저장 된 ABS Position 을 반환한다.
    ' dReadType  : Value in Flash Memory (0), Real used Value in memory(1)
    Public Declare Function AxmStatusGetFlashAbsOffset Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dPosition As Integer, ByVal dReadType As Integer) As Integer
    ' 사용자가 Flash 에 ABS Position 저장할 수 있는 옵션을 설정한다.
    Public Declare Function AxmStatusSetAbsOffsetWriteEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal bStatus As Byte) As Integer
    ' ABS Position 설정 옵션의 상태를 반환한다.
    Public Declare Function AxmStatusGetAbsOffsetWriteEnable Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef bpStatus As bool*) As Integer

    '========== 추가 함수 =========================================================================================================
    ' 직선 보간 을 속도만 가지고 무한대로 증가한다.
    ' 속도 비율대로 거리를 넣어주어야 한다.
    Public Declare Function AxmLineMoveVel Lib "AXL.dll" (ByVal lCoord As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

    '========= 센서 위치 구동 함수( 필독: IP만가능 , QI에는 기능없음)==============================================================
    ' 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 설정한다.
    ' 사용 유무 LOW(0), HIGH(1), UNUSED(2), USED(3)
    Public Declare Function AxmSensorSetSignal Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uLevel As Integer) As Integer
    ' 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 반환한다.
    Public Declare Function AxmSensorGetSignal Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upLevel As Integer) As Integer
    ' 지정 축의 Sensor 신호의 입력 상태를 반환한다
    Public Declare Function AxmSensorReadSignal Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer

    ' 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
    ' Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
    ' 펄스가 출력되는 시점에서 함수를 벗어난다.
    ' lMethod :  0 - 일반 구동, 1 - 센서 신호 검출 전은 저속 구동. 신호 검출 후 일반 구동
    '            2 - 저속 구동
    Public Declare Function AxmSensorMovePos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Integer) As Integer

    ' 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
    ' Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
    ' 펄스 출력이 종료되는 시점에서 함수를 벗어난다.
    Public Declare Function AxmSensorStartMovePos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Integer) As Integer

    ' 원점검색 진행스탭 변화의 기록을 반환한다.
    ' *lpStepCount      : 기록된 Step의 개수
    ' *upMainStepNumber : 기록된 MainStepNumber 정보의 배열포인트
    ' *upStepNumber     : 기록된 StepNumber 정보의 배열포인트
    ' *upStepBranch     : 기록된 Step별 Branch 정보의 배열포인트
    ' 주의: 배열개수는 50개로 고정
    Public Declare Function AxmHomeGetStepTrace Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef lpStepCount As Integer, ByRef upMainStepNumber As Integer, ByRef upStepNumber As Integer, ByRef upStepBranch As Integer) As Integer

    '=======추가 홈 서치 (PI-N804/404에만 해당됨.)=================================================================================
    ' 사용자가 지정한 축의 홈설정 파라메타를 설정한다.(QI칩 전용 레지스터 이용).
    ' uZphasCount : 홈 완료후에 Z상 카운트(0 - 15)
    ' lHomeMode   : 홈 설정 모드( 0 - 12)
    ' lClearSet   : 위치 클리어 , 잔여펄스 클리어 사용 선택 (0 - 3)
    '               0: 위치클리어 사용않함, 잔여펄스 클리어 사용 안함
    '                 1: 위치클리어 사용함, 잔여펄스 클리어 사용 안함
    '               2: 위치클리어 사용안함, 잔여펄스 클리어 사용함
    '               3: 위치클리어 사용함, 잔여펄스 클리어 사용함.
    ' dOrgVel : 홈관련 Org  Speed 설정
    ' dLastVel: 홈관련 Last Speed 설정
    Public Declare Function AxmHomeSetConfig Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uZphasCount As Integer, ByVal lHomeMode As Integer, ByVal lClearSet As Integer, ByVal dOrgVel As Double, ByVal dLastVel As Double, ByVal dLeavePos As Double) As Integer
    ' 사용자가 지정한 축의 홈설정 파라메타를 반환한다.
    Public Declare Function AxmHomeGetConfig Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upZphasCount As Integer, ByRef lpHomeMode As Integer, ByRef lpClearSet As Integer, ByRef dpOrgVel As Double, ByRef dpLastVel As Double, ByRef dpLeavePos As Double) As Integer

    ' 사용자가 지정한 축의 홈 서치를 시작한다.
    ' lHomeMode 사용시 설정 : 0 - 5 설정 (Move Return후에 Search를  시작한다.)
    ' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
    ' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
    Public Declare Function AxmHomeSetMoveSearch Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

    ' 사용자가 지정한 축의 홈 리턴을 시작한다.
    ' lHomeMode 사용시 설정 : 0 - 12 설정
    ' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
    ' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
    Public Declare Function AxmHomeSetMoveReturn Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

    ' 사용자가 지정한 축의 홈 이탈을 시작한다.
    ' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
    Public Declare Function AxmHomeSetMoveLeave Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer

    ' 사용자가 지정한 다축의 홈 서치을 시작한다.
    ' lHomeMode 사용시 설정 : 0 - 5 설정 (Move Return후에 Search를  시작한다.)
    ' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
    ' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
    Public Declare Function AxmHomeSetMultiMoveSearch Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxesNo As Integer, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Integer

    '지정된 좌표계의 구동 속도 프로파일 모드를 설정한다.
    ' (주의점 : 반드시 축맵핑 하고 사용가능)
    ' ProfileMode : '0' - 대칭 Trapezode
    '               '1' - 비대칭 Trapezode
    '               '2' - 대칭 Quasi-S Curve
    '               '3' - 대칭 S Curve
    '               '4' - 비대칭 S Curve
    Public Declare Function AxmContiSetProfileMode Lib "AXL.dll" (ByVal lCoord As Integer, ByVal uProfileMode As Integer) As Integer
    ' 지정된 좌표계의 구동 속도 프로파일 모드를 반환한다.
    Public Declare Function AxmContiGetProfileMode Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upProfileMode As Integer) As Integer

    '========== DIO 인터럽트 플래그 레지스트 읽기
    ' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
    Public Declare Function AxdiInterruptFlagReadBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
    ' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 byte 단위로 인터럽트 발생 상태 값을 읽음
    Public Declare Function AxdiInterruptFlagReadByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
    ' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 word 단위로 인터럽트 발생 상태 값을 읽음
    Public Declare Function AxdiInterruptFlagReadWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
    ' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 double word 단위로 인터럽트 발생 상태 값을 읽음
    Public Declare Function AxdiInterruptFlagReadDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
    ' 전체 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
    Public Declare Function AxdiInterruptFlagRead Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    '========= 로그 관련 함수 ==========================================================================================
    ' 현재 자동으로 설정됨.
    ' 설정 축의 함수 실행 결과를 EzSpy에서 모니터링 할 수 있도록 설정 또는 해제하는 함수이다.
    ' uUse : 사용 유무 => DISABLE(0), ENABLE(1)
    Public Declare Function AxmLogSetAxis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uUse As Integer) As Integer

    ' EzSpy에서의 설정 축 함수 실행 결과 모니터링 여부를 확인하는 함수이다.
    Public Declare Function AxmLogGetAxis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upUse As Integer) As Integer

    '=========== 로그 출력 관련 함수
    '지정한 입력 채널의 EzSpy에 로그 출력 여부를 설정한다.
    Public Declare Function AxaiLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uUse As Integer) As Integer
    '지정한 입력 채널의 EzSpy에 로그 출력 여부를 확인한다.
    Public Declare Function AxaiLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUse As Integer) As Integer

    '==지정한 출력 채널의 EzSpy 로그 출력
    '지정한 출력 채널의 EzSpy에 로그 출력 여부를 설정한다.
    Public Declare Function AxaoLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uUse As Integer) As Integer
    '지정한 출력 채널의 EzSpy에 로그 출력 여부를 확인한다.
    Public Declare Function AxaoLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUse As Integer) As Integer

    '==Log
    ' 지정한 모듈의 EzSpy에 로그 출력 여부 설정
    Public Declare Function AxdLogSetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal uUse As Integer) As Integer
    ' 지정한 모듈의 EzSpy에 로그 출력 여부 확인
    Public Declare Function AxdLogGetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upUse As Integer) As Integer
